--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a
+            href="https://www.shecodes.io/graduates/98220-charlie-g"
+            target="_blank"
+            >Charlie G</a
+          >
+          and is
+          <a href="https://github.com/charliegood2046" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://sparkly-medovik-69f5f6.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
